--- a/README
+++ b/README
@@ -1,6 +1,8 @@
-# Ideas y Oportunidades
+Ideas y Oportunidades
+====================
 
 Ventajas del sistema
+--------------------
 
 * El sistema se construye con tecnologia PHP 5.4, MySQL 5.5, HTML 5, CSS 3 
 * Modulos para cada sección del sitio
